--- a/aula1/index.html
+++ b/aula1/index.html
@@ -1,15 +1,18 @@
 ﻿<html>
 	<head>
-		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-		<script type="text/javascript" src="js.js"></script>
+		<script type="text/javascript" src = "js.js"></script>
 	</head>
 	<body>
 		<form>
-			<input type="text" id="textbox">
+			<input type = "text" id = "textbox">
 			<br/>
-			<input type="button" value="calcular (DOM)" onclick="fibDOM();">
+			<input type = "button" value = "calcular (DOM)" onclick = "fibDOM();">
 			<br/>
-			<p id="resultado">Resultado: </p>
+			<input type = "button" value = "multiplos" onclick = "multiplos();">
+			<br/>
+			<input type = "button" value = "cliques" onclick = "cliques();">
+			<br/>
+			<p id="resultado"> Resultado: </p>
 		</form>
 	</body>
 </html>
