--- a/aula1/index.html
+++ b/aula1/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<script type="text/javascript" src = "js.js"></script>
 	</head>
-	<body>
+	<body onload="confirmado();">
 		<form>
 			<input type = "text" id = "textbox">
 			<br/>
