--- a/aula1/index.html
+++ b/aula1/index.html
@@ -12,6 +12,8 @@
 			<br/>
 			<input type = "button" value = "cliques" onclick = "cliques();">
 			<br/>
+			<input type = "button" value = "pop-up" onclick = "popup();">
+			<br/>
 			<p id="resultado"> Resultado: </p>
 		</form>
 	</body>
