--- a/crap/crap.html
+++ b/crap/crap.html
@@ -5,10 +5,12 @@
 
 <script src="jquery-1.11.2.min.js"></script>
 <script>
-var dado1 = 1;
+var dado1 = 6;
 var dado2 = 1;
 function Random()
 	{
+		dado1 = parseInt((Math.random()*100)%6 + 1);
+		dado2 = parseInt((Math.random()*100)%6 + 1);
 		$('#dado1').attr('src', "imagens/" + dado1 + ".png");
 		$('#dado2').attr('src', "imagens/" + dado2 + ".png");
 	}
@@ -24,9 +26,9 @@ padding: 15px 20px 15px 20px;
 }
 </style>
 <body>
-<img src = "#" id = "dado1" class = "dado"/>
-<img src = "#" id = "dado2" class = "dado"/>
+<img src = "imagens/1.png" id = "dado1" class = "dado"/>
+<img src = "imagens/1.png" id = "dado2" class = "dado"/>
 
-<button onclick="Random()">Try!</button>
+<button onclick="Random();">Try!</button>
 </body>
 </html>
