--- a/crap/crap.html
+++ b/crap/crap.html
@@ -14,6 +14,7 @@ function Random()
 		dado2 = parseInt((Math.random()*100)%6 + 1);
 		$('#dado1').attr('src', "imagens/" + dado1 + ".png");
 		$('#dado2').attr('src', "imagens/" + dado2 + ".png");
+		RolarDados();
 		Verificar();
 	}
 var soma = 0;
@@ -53,6 +54,23 @@ function Verificar()
 			}
 	}
 
+function RolarDados()
+	{
+		var posicaoX1 = parseInt((Math.random()*1000)%600);
+		var posicaoY1 = parseInt((Math.random()*1000)%170);
+		$("#dado1").css('left', posicaoX1);
+		$("#dado1").css('top', posicaoY1);
+		var posicaoX2 = 0;
+		var posicaoY2 = 0;
+		do
+		{
+			posicaoX2 = parseInt((Math.random()*1000)%600);
+			posicaoY2 = parseInt((Math.random()*1000)%170);
+		} while(!(posicaoX1 - posicaoX2 <= -100 || posicaoX1 - posicaoX2 >= 100 ||
+				posicaoY1 - posicaoY2 <= -100|| posicaoY1 - posicaoY2 >= 100));
+		$("#dado2").css('left', posicaoX2);
+		$("#dado2").css('top', posicaoY2);
+	}
 </script>
 
 <style>
