--- a/crap/crap.html
+++ b/crap/crap.html
@@ -1,162 +1,12 @@
-<DOCTYPE! html>
+﻿<DOCTYPE! html>
 <head>
 <title></title>
 </head>
 
 <script src="jquery-1.11.2.min.js"></script>
-<script>
-var dado1 = 6;
-var dado2 = 1;
-var rodada = 0;
-function Random()
-	{
-		dado1 = parseInt((Math.random()*100)%6 + 1);
-		dado2 = parseInt((Math.random()*100)%6 + 1);
-		$('#dado1').attr('src', "imagens/" + dado1 + ".png");
-		$('#dado2').attr('src', "imagens/" + dado2 + ".png");
-		Inserir_tabela();
-		RolarDados();
-		Verificar();
-	}
-var soma = 0;
-function Verificar()
-	{
-		rodada++;
-		if (rodada == 1)
-			{
-				soma = dado1 + dado2;
-				if (soma == 7 || soma == 11)   
-					{
-						alert('Jogador ganhou!');
-						$("#botao").attr("disabled", "disabled");
-					}
-				else if (soma == 2 || soma == 3 || soma == 12)
-					{
-						alert('Jogador perdeu!');
-						$("#botao").attr("disabled", "disabled");						
-					}
-				else
-					{
-						$('#c' + soma).css('background', '#FFB003');
-					}
-			}
-		else 
-			{
-				if (soma == dado1 + dado2)
-					{
-						alert('Jogador venceu!');
-						$("#botao").attr("disabled", "disabled");
-					}
-				else if (dado1 + dado2 == 7)
-					{
-						alert('Jogador perdeu!');
-						$("#botao").attr("disabled", "disabled");
-					}
-			}
-	}
-	function Inserir_tabela()
-	{
-		var j;
-		$('#j' + (rodada % 5)).html(dado1+dado2);
-	
-	}
+<script src="scriptexterno.js"></script>
 
-function RolarDados()
-	{
-		var posicaoX1 = parseInt((Math.random()*1000)%600);
-		var posicaoY1 = parseInt((Math.random()*1000)%170);
-		$("#dado1").css('left', posicaoX1);
-		$("#dado1").css('top', posicaoY1);
-		var posicaoX2 = 0;
-		var posicaoY2 = 0;
-		do
-		{
-			posicaoX2 = parseInt((Math.random()*1000)%600);
-			posicaoY2 = parseInt((Math.random()*1000)%170);
-		} while(!(posicaoX1 - posicaoX2 <= -100 || posicaoX1 - posicaoX2 >= 100 ||
-				posicaoY1 - posicaoY2 <= -100|| posicaoY1 - posicaoY2 >= 100));
-		$("#dado2").css('left', posicaoX2);
-		$("#dado2").css('top', posicaoY2);
-	}
-</script>
-
-<style>
-.dado 
-{
-width: 100px;
-height: 100px;
-padding: 0px;
-position: absolute;
-}
-
-#mesa
-{
-border-radius: 15px;
-width: 900px;
-height: 500px;
-padding: 15px;
-margin: 0px auto;
-position: relative;
-background-color: #008904;
-border: 15px solid #FFB003;
-}
-
-#botao
-{
-float: right;
-position: absolute;
-bottom: 0px;
-right: 0px;
-font-size: 30px;
-}
-
-#rolarDados
-{
-position: relative;
-float: left;
-height: 270px;
-width: 700px;
-}
-
-#soma
-{
-position: relative;
-float: left;
-height: 225px;
-width: 700px;
-}
-
-#direita
-{
-position: relative;
-float: right;
-height: 500px;
-width: 190px;
-}
-
-table
-{
-position: relative;
-margin: 0px auto;
-border-spacing: 0px;
-border: solid #F4F4F4 3px;
-}
-
-table td
-{
-border: solid #F4F4F4 3px;
-margin: 0px;
-padding: 20px;
-width: 65px;
-}
-
-table td h1
-{
-font-size: 60px;
-line-height: 60px;
-text-align: center;
-}
-</style>
+<link href="cssexterno.css" rel="stylesheet">
 <body>
 <div id="mesa">
 	<div id="direita">
@@ -169,7 +19,7 @@ text-align: center;
 		<tr><td id = "j4"></td></tr>
 	</table>
 	
-		<button id="botao" onclick="Random();">Jogar</button>
+		<button id="botao" onclick="Random();">Jogar!</button>
 	</div>
 	<div id="soma">
 		<table>
@@ -196,5 +46,7 @@ text-align: center;
 		<img src = "imagens/1.png" id = "dado2" class = "dado"/>
 	</div>
 </div>
+
+<h3>IFRN. Jogo Crap. 4° bimestre. </h3>
 </body>
 </html>
