Com botão regarregar

--- a/crap/crap.html
+++ b/crap/crap.html
@@ -19,7 +19,9 @@
 		<tr><td id = "j4"></td></tr>
 	</table>
 	
-		<button id="botao" onclick="Random();">Jogar!</button>
+		<button id="botao" onclick="Random();">Play !</button>
+		<button id ="botao2" onclick="Refresh();">Refresh! </button>
+		
 	</div>
 	<div id="soma">
 		<table>
