--- a/crap/crap.html
+++ b/crap/crap.html
@@ -1,6 +1,6 @@
 ﻿<DOCTYPE! html>
 <head>
-<title></title>
+<title> CRAPS </title>
 </head>
 
 <script src="jquery-1.11.2.min.js"></script>
@@ -48,7 +48,7 @@
 		<img src = "imagens/1.png" id = "dado2" class = "dado"/>
 	</div>
 </div>
-
+<p id="myP">This is a p element.</p>
 <h3>IFRN. Jogo Crap. 4° bimestre. </h3>
 </body>
 </html>
