--- a/slide1/slide/slide.html
+++ b/slide1/slide/slide.html
@@ -95,7 +95,7 @@ right: 40px;
 top: 5px;
 width: 30px;
 height: 30px;
-background-color: #f00;
+background-color: white;
 position: absolute;
 visibility: hidden;
 }
@@ -233,8 +233,8 @@ function voltar()
 		<div id = "next"> <img src = "setanext.jpg" width="100%" height = "100%"/> </div>
 		<div id = "b4"> <img src = "setab4.jpg" width="100%" height = "100%"/></div>
 		<div id = "fechar"><h3> <img src = "closebtn.png" width="100%" height = "100%"/> </h3> </div>
-		<div id = "iniciarSlide"></div>
-		<div id = "encerrarSlide"></div>
+		<div id = "iniciarSlide"><img src = "playbtn.jpg" width="100%" height = "100%"/></div>
+		<div id = "encerrarSlide"><img src = "pausebtn.png"width="100%" height = "100%"/></div>
 		<div id = "imagem_grande">
 			<img src="#"/>
 		</div>
